--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,19 @@
 **/*.DS_Store
 target
 log
+*.iml
+logs
+project/project
+project/target
+target
+tmp
+.history
+dist
+/.idea
+/*.iml
+/out
+/.idea_modules
+/.classpath
+/.project
+/RUNNING_PID
+/.settings
