--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,1 +1,14 @@
 # Compose file to run all services from source and all dependencies from docker-hub
+version: '2'
+services:
+  mongodb:
+      image: mongo:latest
+      container_name: "mongodb"
+      environment:
+        - MONGO_DATA_DIR=/data/db
+        - MONGO_LOG_DIR=/dev/null
+      volumes:
+        - ./data/db:/data/db
+      ports:
+        - 27017:27017
+      command: mongod --smallfiles --logpath=/dev/null
